--- a/judo_profiles/templates/profiles/edit.html
+++ b/judo_profiles/templates/profiles/edit.html
@@ -7,11 +7,11 @@
     {% load guardian_tags %}
     {% get_obj_perms request.user for profile as "profile_perms" %}
     {% if "view_profile" in profile_perms and request.user != profile.user %}
-        <a class="nav-link" href="{% url "profiles-profile" profile.user.username %}">{% translate "Profile" %}</a>
+        <a class="nav-link" href="{% url "profile" profile.user.username %}">{% translate "Profile" %}</a>
     {% endif %}
         <a class="nav-link active" href="">{% translate "Edit" %}</a>
     {% if "manage_profile" in profile_perms %}
-        <a class="nav-link" href="{% url "profiles-profile-manage" profile.user.username %}">{% translate "Manage" %}</a>
+        <a class="nav-link" href="{% url "manage-profile" profile.user.username %}">{% translate "Manage" %}</a>
     {% endif %}
     {% if request.user == profile.created_by or request.user.is_superuser %}
         <button type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#delete_modal">{% translate "Delete" %}</button>
