--- a/judo_profiles/templates/profiles/manage.html
+++ b/judo_profiles/templates/profiles/manage.html
@@ -28,10 +28,10 @@
     {% load guardian_tags %}
     {% get_obj_perms request.user for profile as "profile_perms" %}
     {% if "view_profile" in profile_perms and request.user != profile.user %}
-        <a class="nav-link" href="{% url "profiles-profile" profile.user.username %}">{% translate "Profile" %}</a>
+        <a class="nav-link" href="{% url "profile" profile.user.username %}">{% translate "Profile" %}</a>
     {% endif %}
     {% if "change_profile" in profile_perms %}
-        <a class="nav-link" href="{% url "profiles-profile-edit" profile.user.username %}">{% translate "Edit" %}</a>
+        <a class="nav-link" href="{% url "edit-profile" profile.user.username %}">{% translate "Edit" %}</a>
     {% endif %}
     <a class="nav-link active" href="">{% translate "Manage" %}</a>
 {% endblock %}
@@ -40,47 +40,32 @@
     <div class="container">
         <div class="row mb-3">
             <h2 class="col text-nowrap text-center">{% blocktranslate with profile_name=profile.name %}Access to profile of {{ profile_name }}{% endblocktranslate %}</h2>
-            {% if request.user == profile.created_by or request.user.is_admin or request.user.is_staff %}
+            {% if request.user == profile.created_by or request.user.is_staff %}
                 <form method="post" class="col">
                     {% csrf_token %}
                     <div class="d-flex justify-content-center">
                         {% if not profile.user.token and not profile.user.is_active %}
-                            <button class="btn btn-secondary text-nowrap" name="add">{% translate "Key for connected user" %}</button>
+                            <button class="btn btn-secondary text-nowrap" name="add"
+                                hx-post=""
+                                hx-trigger="click"
+                                hx-target="#token_group"
+                                hx-on::after-request="if(event.detail.successful) new bootstrap.Modal('#token_modal').show()"
+                                hx-headers='{"X-CSRFTOKEN": "{{ csrf_token }}"}'
+                            >{% translate "Key for connected user" %}</button>
+
                         {% else %}
                             {% if not profile.user.is_active %}
                                 <table class="text-center">
                                     <tr class="text-nowrap">
                                         {% if profile.user.token.valid_for < 1 %}
                                             <td class="pe-3">{% translate "Key expired, without being used" %}</td>
-                                            <td><button class="btn btn-secondary text-nowrap" name="renew">{% translate "Renew key" %}</button></td>
-                                        {% else %}
-                                            <td class="pe-2"><button type="button" class="btn btn-secondary text-nowrap" data-bs-toggle="modal" data-bs-target="#token_modal">{% translate "Show key" %}</button></td>
-                                            <div class="modal fade" id="token_modal" tabindex="-1" aria-labelledby="token_modal_label" aria-hidden="true">
-                                                <div class="modal-dialog ">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <h1 class="modal-title fs-5" id="token_modal_label">{% translate "Key" %}</h1>
-                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <ul>
-                                                                <li>{{ days }}</li>
-                                                                <li>
-                                                                    {% translate "Username" %}: {{ profile.user }}
-                                                                </li>
-                                                            </ul>
-                                                            <div class="input-group">
-                                                                <input id="token" type="password" class="form-control" value="{{ profile.user.token }}" aria-label="Key" readonly>
-                                                                <button class="btn btn-outline-secondary" type="button" onclick="toggle_token(this)"><i class="bi bi-eye"></i></button>
-                                                                <button class="btn btn-outline-secondary" type="button" onclick="copy_token(this)"><i class="bi bi-clipboard"></i></button>
-                                                            </div>
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% translate "Ok" %}</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <td><button class="btn btn-secondary text-nowrap" name="renew"
+                                                    hx-post=""
+                                                    hx-trigger="click"
+                                                    hx-target="#token_group"
+                                                    hx-on::after-request="if(event.detail.successful) new bootstrap.Modal('#token_modal').show()"
+                                                    hx-headers='{"X-CSRFTOKEN": "{{ csrf_token }}"}'
+                                                >{% translate "Renew key" %}</button></td>
                                         {% endif %}
                                         <td><button class="btn btn-secondary text-nowrap" name="delete">{% translate "Delete key" %}</button></td>
                                     </tr>
@@ -92,6 +77,37 @@
             {% endif %}
         </div>
     </div>
+
+    <div class="modal fade" id="token_modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="token_modal_label" aria-hidden="true">
+        <div class="modal-dialog ">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="token_modal_label">{% translate "Generated key" %}</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <ul>
+                        <li>{{ days }}</li>
+                        <li>
+                            {% translate "Username" %}: {{ profile.user }}
+                        </li>
+                        <li>
+                            {% translate "Copy the key now - You won't able to see it key again" %}
+                        </li>
+                    </ul>
+                    <div id="token_group" class="input-group"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% translate "Ok" %}</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        document.getElementById("token_modal").addEventListener("hide.bs.modal", () => {
+            location.reload();
+        });
+    </script>
 
     <div class="container">
         <form hx-post=""
