--- a/judo_profiles/templates/users.html
+++ b/judo_profiles/templates/users.html
@@ -6,9 +6,9 @@
 {% block manage %}active" aria-current="page{% endblock %}
 
 {% block admin_actions %}
-    <a class="nav-link" href="{% url "users-new-trainer" %}">{% translate "New trainer" %}</a>
+    <a class="nav-link" href="{% url "new-trainer" %}">{% translate "New trainer" %}</a>
     {% if request.user.is_superuser %}
-        <a class="nav-link" href="{% url "users-new-staff" %}">{% translate "New staff member" %}</a>
+        <a class="nav-link" href="{% url "new-staff" %}">{% translate "New staff member" %}</a>
     {% endif %}
 {% endblock %}
 
