--- a/judo_profiles/templates/users/manage.html
+++ b/judo_profiles/templates/users/manage.html
@@ -114,7 +114,7 @@
                             {% translate "Username" %}: {{ user }}
                         </li>
                         <li>
-                            {% translate "Copy the key now - You won't able to see it key again" %}
+                            {% translate "Copy the key now - You won't able to see it again" %}
                         </li>
                     </ul>
                     <div id="token_group" class="input-group"></div>
