--- a/judo_profiles/templates/users/new.html
+++ b/judo_profiles/templates/users/new.html
@@ -17,7 +17,7 @@
             <input type="text" class="form-control" name="first_name" placeholder="{% translate "First name" %}" required>
             <input type="text" class="form-control my-2" name="last_name" placeholder="{% translate "Last name" %}" required>
             <div class="d-flex justify-content-center">
-                <input type="submit" class="btn btn-secondary mt-2" value="{% translate "Create key" %}">
+                <input type="submit" class="btn btn-secondary mt-2" value="{% translate "Create user" %}">
             </div>
         </form>
     </div>
