--- a/judo_profiles/templates/abstract/base.html
+++ b/judo_profiles/templates/abstract/base.html
@@ -22,6 +22,16 @@
             .form-control, .form-select {
                 max-width: 32rem;
             }
+            footer {
+                margin-top: auto;
+            }
+            html, body {
+                height: 100%;
+            }
+            #wrapper {
+                min-height: 100%;
+                flex-direction: column;
+            }
         </style>
         <noscript>
             <style>
@@ -36,84 +46,95 @@
         {% block style %}{% endblock %}
     </head>
     <body>
-        <header class="sticky-top">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
-                <div class="container-fluid">
-                    <a class="navbar-brand" id="logo_container" href="{% url "index" %}">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="8" width="27" height="27" style="translate: 0 -.15rem;">
-                            <circle cx="50" cy="50" r="45" />
-                            <path d="M50 20L80 50L50 80L20 50Z" />
-                            <circle fill="currentColor" cx="50" cy="50" r="4" />
-                        </svg>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div id="nav" class="collapse navbar-collapse">
-                        <div class="navbar-nav me-auto d-flex justify-content-center">
-                            {% if request.user.is_authenticated %}
-                                <a class="nav-link {% block profiles %}{% endblock %}" href="{% url "profiles" %}">{% translate "Dashboard" %}</a>
-                                {% if request.user.profile %}
-                                    <a class="nav-link {% block own %}{% endblock %}" href="{% url "profile" request.user.username %}">{% translate "Own profile"%}</a>
-                                {% endif %}
-                                {% block actions %}{% endblock %}
-                                {% if request.user.is_staff %}
-                                    <a class="nav-link {% block manage %}{% endblock %}" href="{% url "users" %}">{% translate "Users" %}</a>
-                                {% endif %}
-                                {% if request.user.is_superuser %}
-                                    <a class="nav-link {% block server %}{% endblock %}" href="{% url "statistics" %}">{% translate "Server" %}</a>
-                                {% endif %}
-                                {% block admin_actions %}{% endblock %}
+        <div id="wrapper" class="d-flex">
+            <header class="sticky-top">
+                <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" id="logo_container" href="{% url "index" %}">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="8" width="27" height="27" style="translate: 0 -.15rem;">
+                                <circle cx="50" cy="50" r="45" />
+                                <path d="M50 20L80 50L50 80L20 50Z" />
+                                <circle fill="currentColor" cx="50" cy="50" r="4" />
+                            </svg>
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div id="nav" class="collapse navbar-collapse">
+                            <div class="navbar-nav me-auto d-flex justify-content-center">
+                                {% if request.user.is_authenticated %}
+                                    <a class="nav-link {% block profiles %}{% endblock %}" href="{% url "profiles" %}">{% translate "Dashboard" %}</a>
+                                    {% if request.user.profile %}
+                                        <a class="nav-link {% block own %}{% endblock %}" href="{% url "profile" request.user.username %}">{% translate "Own profile"%}</a>
+                                    {% endif %}
+                                    {% block actions %}{% endblock %}
+                                    {% if request.user.is_staff %}
+                                        <a class="nav-link {% block manage %}{% endblock %}" href="{% url "users" %}">{% translate "Users" %}</a>
+                                    {% endif %}
+                                    {% if request.user.is_superuser %}
+                                        <a class="nav-link {% block server %}{% endblock %}" href="{% url "statistics" %}">{% translate "Server" %}</a>
+                                    {% endif %}
+                                    {% block admin_actions %}{% endblock %}
+                                </div>
+                                <div class="navbar-nav d-flex justify-content-end">
+                                    <span class="navbar-text me-2">{% translate "Hello" %} {{ request.user.first_name|default:request.user.username }}</span>
+                                    <div class="d-flex">
+                                        <button id="theme-selector" class="btn" onclick="theme_selector_callback()"><i class="bi bi-circle-half"></i></button>
+                                    </div>
+                                    <a class="nav-link {% block update %}{% endblock %}" href="{% url "account" %}">{% translate "Account" %}</a>
+                                    <a class="nav-link" href="{% url "logout" %}">{% translate "Logout" %}</a>
+                                {% else %}
                             </div>
-                            <div class="navbar-nav d-flex justify-content-end">
-                                <span class="navbar-text me-2">{% translate "Hello" %} {{ request.user.first_name|default:request.user.username }}</span>
+                            <div class="navbar-nav d-flex">
                                 <div class="d-flex">
                                     <button id="theme-selector" class="btn" onclick="theme_selector_callback()"><i class="bi bi-circle-half"></i></button>
                                 </div>
-                                <a class="nav-link {% block update %}{% endblock %}" href="{% url "account" %}">{% translate "Account" %}</a>
-                                <a class="nav-link" href="{% url "logout" %}">{% translate "Logout" %}</a>
-                            {% else %}
-                        </div>
-                        <div class="navbar-nav d-flex">
-                            <div class="d-flex">
-                                <button id="theme-selector" class="btn" onclick="theme_selector_callback()"><i class="bi bi-circle-half"></i></button>
+                                <a class="nav-link {% block login %}{% endblock %}" href="{% url "login" %}">{% translate "Login" %}</a>
+                                <a class="nav-link {% block register %}{% endblock %}" href="{% url "register" %}">{% translate "Register with key" %}</a>
+                                {% endif %}
+                                <a class="nav-link {% block about %}{% endblock %}" href="{% url "about" %}">{% translate "About" %}</a>
+                                {% if not request.user.is_authenticated %}
+                                    <form id="language_form" action="{% url "set_language" %}" method="post" class="d-flex mx-2">
+                                        {% csrf_token %}
+                                        <input name="next" type="hidden" value="{{ redirect_to }}">
+                                        <select id="languages" name="language" class="form-select" style="background-color: rgba(var(--bs-tertiary-bg-rgb),var(--bs-bg-opacity));">
+                                            {% get_current_language as LANGUAGE_CODE %}
+                                            {% get_available_languages as LANGUAGES %}
+                                            {% get_language_info_list for LANGUAGES as languages %}
+                                            {% for language in languages %}
+                                                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                                                    {{ language.name_local }} ({{ language.code }})
+                                                </option>
+                                            {% endfor %}
+                                        </select>
+                                    </form>
+                                    <script>
+                                        document.getElementById("languages").addEventListener("change", () => {
+                                            document.getElementById("language_form").submit();
+                                        });
+                                    </script>
+                                {% endif %}
                             </div>
-                            <a class="nav-link {% block login %}{% endblock %}" href="{% url "login" %}">{% translate "Login" %}</a>
-                            <a class="nav-link {% block register %}{% endblock %}" href="{% url "register" %}">{% translate "Register with key" %}</a>
-                            {% endif %}
-                            <a class="nav-link {% block about %}{% endblock %}" href="{% url "about" %}">{% translate "About" %}</a>
-                            {% if not request.user.is_authenticated %}
-                                <form id="language_form" action="{% url "set_language" %}" method="post" class="d-flex mx-2">
-                                    {% csrf_token %}
-                                    <input name="next" type="hidden" value="{{ redirect_to }}">
-                                    <select id="languages" name="language" class="form-select" style="background-color: rgba(var(--bs-tertiary-bg-rgb),var(--bs-bg-opacity));">
-                                        {% get_current_language as LANGUAGE_CODE %}
-                                        {% get_available_languages as LANGUAGES %}
-                                        {% get_language_info_list for LANGUAGES as languages %}
-                                        {% for language in languages %}
-                                            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                                                {{ language.name_local }} ({{ language.code }})
-                                            </option>
-                                        {% endfor %}
-                                    </select>
-                                </form>
-                                <script>
-                                    document.getElementById("languages").addEventListener("change", () => {
-                                        document.getElementById("language_form").submit();
-                                    });
-                                </script>
-                            {% endif %}
                         </div>
                     </div>
+                    <script src="{% static "script/colorscheme.js" %}"></script>
+                </nav>
+            </header>
+            <div id="noscript" class="container position-absolute top-50 start-50 translate-middle text-center alert-danger alert">
+                <h4>{% translate "This site only works with Javascript - to use this please activate it" %}</h4>
+            </div>
+            <div id="script" class="mx-2 mb-2">
+                {% block content %}{% endblock %}
+            </div>
+            <footer class="bg-body-tertiary">
+                <div class="container text-center my-2">
+                    <a class="link-underline link-underline-opacity-0" href="https://github.com/technicfan/judo_profiles" target="_blank">{% translate "Source code" %}</a>
+                    <span class="mx-1"> • </span>
+                    <a class="link-underline link-underline-opacity-0" href="{% url "privacy" %}">{% translate "Privacy" %}</a>
+                    <span class="mx-1"> • </span>
+                    <a class="link-underline link-underline-opacity-0" href="{% url "contact" %}">{% translate "Contact" %}</a>
                 </div>
-                <script src="{% static "script/colorscheme.js" %}"></script>
-            </nav>
-        </header>
-        <div id="noscript" class="container position-absolute top-50 start-50 translate-middle text-center alert-danger alert">
-            <h4>{% translate "This site only works with Javascript - to use this please activate it" %}</h4>
-        </div>
-        <div id="script" class="mx-2">
-            {% block content %}{% endblock %}
+            </footer>
         </div>
         {% block script %}{% endblock %}
     </body>
