--- a/judo_profiles/templates/lang/en/about.html
+++ b/judo_profiles/templates/lang/en/about.html
@@ -20,11 +20,11 @@
         </p>
         <h3>Technical</h3>
         <p>
-            This is a <a href="https://github.com/django/django">Django</a> project, that also uses JavaScript for the frontend.
-            It's available free (as in freedom) under the <a href="https://opensource.org/license/mit">MIT License</a>: <a href="https://github.com/technicfan/judo_profiles">GitHub</a><br>
-            I use <a href="https://github.com/django-guardian/django-guardian">django-guardian</a> for per-object-permissions for the profiles.
-            On the client side I use <a href="https://github.com/twbs/bootstrap">Bootstrap</a> for easy styling, a little bit of
-            <a href="https://jquery.com/">jQuery</a> and <a href="https://github.com/bigskysoftware/htmx">htmx</a>, for fast live search without reloading.
+            This is a <a class="link-underline link-underline-opacity-0" href="https://github.com/django/django">Django</a> project, that also uses JavaScript for the frontend.
+            It's available free (as in freedom) under the <a class="link-underline link-underline-opacity-0" href="https://opensource.org/license/mit">MIT License</a>: <a class="link-underline link-underline-opacity-0" href="https://github.com/technicfan/judo_profiles">GitHub</a><br>
+            I use <a class="link-underline-opacity-0" href="https://github.com/django-guardian/django-guardian">django-guardian</a> for per-object-permissions for the profiles.
+            On the client side I use <a class="link-underline link-underline-opacity-0" href="https://github.com/twbs/bootstrap">Bootstrap</a> for easy styling, a little bit
+            <a class="link-underline link-underline-opacity-0" href="https://jquery.com/">jQuery</a>, <a class="link-underline link-underline-opacity-0" href="https://github.com/markedjs/marked">marked.js</a> for markdown server information and <a class="link-underline link-underline-opacity-0" href="https://github.com/bigskysoftware/htmx">htmx</a> for fast live search without reloading.
         </p>
     </div>
 {% endblock %}
