--- a/judo_profiles/templates/account.html
+++ b/judo_profiles/templates/account.html
@@ -9,7 +9,6 @@
     <div class="d-flex justify-content-center">
         <form id="language_form" action="{% url "set_language" %}" method="post">
             {% csrf_token %}
-            <input name="next" type="hidden" value="{{ redirect_to }}">
             <table>
                 <tr>
                     <td>
@@ -48,15 +47,15 @@
             <div id="pass_warn" class="alert alert-warning mx-auto d-none" style="width: fit-content;">
                 {% translate "The passwords don't match" %}
             </div>
-            <input type="password" class="form-control"name="pass" placeholder="{% translate "Current password" %}" required>
+            <input type="password" class="form-control"name="pass" placeholder="{% translate "Current password" %}" aria-label="{% translate "Current password" %}" required>
             <br>
-            <input id="pass1" type="password" class="form-control" name="new_pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="{% translate "New password" %}" required>
+            <input id="pass1" type="password" class="form-control" name="new_pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="{% translate "New password" %}" aria-label="{% translate "New password" %}" required>
             <ul>
                 <li>{% translate "8 characters minimum" %}</li>
                 <li>{% translate "one lower and one upper case character minimum" %}</li>
                 <li>{% translate "one number minimum" %}</li>
             </ul>
-            <input id="pass2" type="password" class="form-control" name="new_pass_confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="{% translate "Repeat new password" %}" required>
+            <input id="pass2" type="password" class="form-control" name="new_pass_confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="{% translate "Repeat new password" %}" aria-label="{% translate "Repeat new password" %}" required>
             <div class="d-flex justify-content-center">
                 <input type="submit" class="btn btn-secondary mt-4" value="{% translate "Change password" %}">
             </div>
@@ -73,7 +72,7 @@
     {% if not request.user.is_superuser %}
         <hr class="mx-auto" style="width: 30rem;">
         <div class="d-flex justify-content-center">
-            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_modal">Konto und Daten löschen</button>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_modal">{% translate "Delete account and data" %}</button>
         </div>
         <div class="modal fade" id="delete_modal" tabindex="-1" aria-labelledby="delete_modal_label" aria-hidden="true">
             <div class="modal-dialog ">
