--- a/judo_profiles/templates/register.html
+++ b/judo_profiles/templates/register.html
@@ -13,15 +13,15 @@
                 <div id="pass_warn" class="alert alert-danger mx-auto d-none" style="width: fit-content;">
                     {% translate "The passwords don't match" %}
                 </div>
-                <input class="form-control-plaintext" type="text" name="username" value="{{ username }}" readonly>
+                <input class="form-control-plaintext" type="text" name="username" value="{{ username }}" aria-readonly="true" readonly>
                 <input type="hidden" name="token" value="{{ token }}" readonly>
-                <input id="pass1" class="form-control" type="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="{% translate "Password" %}" required>
+                <input id="pass1" class="form-control" type="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="{% translate "Password" %}" aria-label="{% translate "Password" %}" required>
                 <ul>
                     <li>{% translate "8 characters minimum" %}</li>
                     <li>{% translate "one lower and one upper case character minimum" %}</li>
                     <li>{% translate "one number minimum" %}</li>
                 </ul>
-                <input id="pass2" class="form-control" type="password" name="password_repeat" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="{% translate "Repeat password" %}" required>
+                <input id="pass2" class="form-control" type="password" name="password_repeat" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="{% translate "Repeat password" %}" aria-label="{% translate "Repeat password" %}" required>
                 <div class="d-flex justify-content-center">
                     <input class="btn btn-secondary mt-4" type="submit" value="{% translate "Register" %}">
                 </div>
@@ -39,8 +39,8 @@
                         {% translate "This key-user-pair does not exist or is expired" %}
                     </div>
                 {% endif %}
-                <input class="form-control" type="text" name="user" placeholder="{% translate "Username" %}" required>
-                <input class="form-control my-2" type="password" name="token" placeholder="{% translate "Key" %}" required>
+                <input class="form-control" type="text" name="user" placeholder="{% translate "Username" %}" aria-label="{% translate "Username" %}" required>
+                <input class="form-control my-2" type="password" name="token" placeholder="{% translate "Key" %}" aria-label="{% translate "Key" %}" required>
                 <div class="d-flex justify-content-center">
                     <input class="btn btn-secondary mt-2" type="submit" value="{% translate "Register with key" %}">
                 </div>
