--- a/judo_profiles/templates/users/manage.html
+++ b/judo_profiles/templates/users/manage.html
@@ -145,6 +145,7 @@
                 </select>
                 <input class="form-control mx-auto" id="search" type="search"
                     name="search" placeholder="{% translate "Search profile" %}..."
+                    aria-label="{% translate "Search profile" %}"
                     hx-post=""
                     hx-target="#profiles"
                     hx-trigger="input changed delay:500ms, keyup[key=='Enter'], change from:#permission, load"
